--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -48,10 +48,10 @@
     <string name="yes">Ja</string>
     <string name="emergency_call">Nødopkald</string>
     <string name="accessibility_settings">Hjælpefunktioner</string>
-    <string name="setup_services">LineageOS-funktioner</string>
-    <string name="services_pp_explanation">&lt;xliff:g id="name" example="LineageOS"&gt;Disse tjenester virker for at udvide funktionerne på din enhed. Data vil blive brugt i overensstemmelse med  &lt;xliff:g id="name" example="LineageOS"&gt;%1$s&lt;/xliff:g&gt;\'s privatlivspolitik.</string>
+    <string name="setup_services">XPerience-funktioner</string>
+    <string name="services_pp_explanation">&lt;xliff:g id="name" example="XPerience"&gt;Disse tjenester virker for at udvide funktionerne på din enhed. Data vil blive brugt i overensstemmelse med  &lt;xliff:g id="name" example="XPerience"&gt;%1$s&lt;/xliff:g&gt;\'s privatlivspolitik.</string>
     <string name="services_find_privacy_policy">Du kan læse privatlivspolitikken på en anden enhed ved at besøge <xliff:g id="uri" example="https://lineageos.org/legal">%1$s</xliff:g></string>
-    <string name="services_help_improve_cm">Hjælp med at forbedre <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
+    <string name="services_help_improve_cm">Hjælp med at forbedre <xliff:g id="name" example="XPerience">%s</xliff:g></string>
     <string name="services_os_nav_keys_label"><b>Brug navigationstaster på skærm</b> i stedet for fysiske-taster.</string>
     <string name="settings_biometric_setup_title">Vælg sikkerheds-låseskærmtype</string>
     <string name="settings_biometric_setup_details">Hvordan vil du låse din skærm?</string>
@@ -66,8 +66,8 @@
     <string name="lockscreen_setup_title" product="default">Beskyt din telefon</string>
     <string name="lockscreen_setup_summary"><b>Beskyt denne enhed</b>, og kræv en PIN, et mønster, eller en adgangskode, for at låse skærmen op</string>
     <string name="lockscreen_setup_screen_lock_setup">Opsætning</string>
-    <string name="update_recovery_title">Opdater Lineage Genddanelse</string>
-    <string name="update_recovery_description">Opdateringer Lineage Recovery ved første opstart efter hver opdatering.</string>
+    <string name="update_recovery_title">Opdater XPerience Genddanelse</string>
+    <string name="update_recovery_description">Opdateringer XPerience Recovery ved første opstart efter hver opdatering.</string>
     <string name="update_recovery_warning">Gendannelse vil blive opdateret, så snart du er færdig med opsætningen. Hvis du ønsker at holde det intakt, skal du deaktivere denne funktion.</string>
-    <string name="update_recovery_setting">Opdater Lineage Recovery sammen med OS</string>
+    <string name="update_recovery_setting">Opdater XPerience Recovery sammen med OS</string>
 </resources>
