--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -47,10 +47,10 @@
     <string name="yes">დიახ</string>
     <string name="data_sim_name">SIM <xliff:g id="sub">%1$d</xliff:g> - <xliff:g id="name">%2$s</xliff:g></string>
     <string name="emergency_call">საგანგებო ზარი</string>
-    <string name="setup_services">LineageOS-ს შესაძლებლობები</string>
-    <string name="services_pp_explanation">ამ მომსახურებების მუშაობა აფართოებს თქვენი მოწყობილობების შესაძლებლობებს. მონაცემებით სარგებლობის პირობებს განსაზღვრავს <xliff:g id="name" example="LineageOS">%1$s</xliff:g> მისი პირადულობის დებულებით.</string>
-    <string name="services_help_improve_cm">დაგვეხმარეთ, გავაუმჯობესოთ <xliff:g id="name" example="LineageOS">%s</xliff:g></string>
-    <string name="services_metrics_label"><xliff:g id="name" example="Help improve LineageOS">%1$s</xliff:g> საკვლევი და გამოყენების მონაცემთა ავტომატური გაგზავნით, რომელთაც გაეცნობა <xliff:g id="name" example="LineageOS">%2$s</xliff:g>. ეს მონაცემები არ გამოდგება თქვენი ვინაობის დასადგენად, სამაგიეროდ ხელს გაუმართავს შემმუშავებლებს, რომ დახვეწონ ბატარეის მოხმარება, გაზარდონ აპების წარმადობა და გააუმჯობესონ <xliff:g id="name" example="LineageOS">%3$s</xliff:g> ახალი შესაძლებლობებით.</string>
+    <string name="setup_services">XPerience-ს შესაძლებლობები</string>
+    <string name="services_pp_explanation">ამ მომსახურებების მუშაობა აფართოებს თქვენი მოწყობილობების შესაძლებლობებს. მონაცემებით სარგებლობის პირობებს განსაზღვრავს <xliff:g id="name" example="XPerience">%1$s</xliff:g> მისი პირადულობის დებულებით.</string>
+    <string name="services_help_improve_cm">დაგვეხმარეთ, გავაუმჯობესოთ <xliff:g id="name" example="XPerience">%s</xliff:g></string>
+    <string name="services_metrics_label"><xliff:g id="name" example="Help improve XPerience">%1$s</xliff:g> საკვლევი და გამოყენების მონაცემთა ავტომატური გაგზავნით, რომელთაც გაეცნობა <xliff:g id="name" example="XPerience">%2$s</xliff:g>. ეს მონაცემები არ გამოდგება თქვენი ვინაობის დასადგენად, სამაგიეროდ ხელს გაუმართავს შემმუშავებლებს, რომ დახვეწონ ბატარეის მოხმარება, გაზარდონ აპების წარმადობა და გააუმჯობესონ <xliff:g id="name" example="XPerience">%3$s</xliff:g> ახალი შესაძლებლობებით.</string>
     <string name="services_os_nav_keys_label"><b>ეკრანული ღილაკების გამოყენება გადასაადგილებლად</b> აპარატურული ღილაკების ნაცვლად.</string>
     <string name="settings_biometric_setup_details">როგორ გსურთ ეკრანის ჩაკეტვა?</string>
     <string name="fingerprint_setup_title">თითის ანაბეჭდის გამართვა</string>
@@ -69,8 +69,8 @@
     <string name="lockscreen_setup_summary"><b>დაიცავით მოწყობილობა</b> და ჩართეთ PIN-კოდის, მონახაზის ან პაროლის შეყვანის მოთხოვნა, ჩაკეტილი ეკრანის გასახსნელად</string>
     <string name="lockscreen_setup_screen_lock_setup">გამართვა</string>
     <string name="intro_restore_title">აპებისა და მონაცემების აღდგენა</string>
-    <string name="update_recovery_title">Lineage-აღმდგენის განახლება</string>
-    <string name="update_recovery_description">განაახლებს Lineage-აღმდგენს პირველი ჩატვირთვისას, ყოველი განახლების შემდგომ.</string>
+    <string name="update_recovery_title">XPerience-აღმდგენის განახლება</string>
+    <string name="update_recovery_description">განაახლებს XPerience-აღმდგენს პირველი ჩატვირთვისას, ყოველი განახლების შემდგომ.</string>
     <string name="update_recovery_warning">აღმდგენი განახლდება გამართვის დასრულებისთანავე. თუ გსურთ, ხელუხლებელი დარჩეს, გათიშეთ ეს შესაძლებლობა.</string>
-    <string name="update_recovery_setting">განახლდეს Lineage-აღმდგენი სისტემასთან ერთად</string>
+    <string name="update_recovery_setting">განახლდეს XPerience-აღმდგენი სისტემასთან ერთად</string>
 </resources>
